// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useMenuConfig should not return analytics related menu items 1`] = `
Array [
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "AppInsights (coming soon)",
          },
        ],
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Video Call QoE",
          },
        ],
        "uri": "/videoCallQoe",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "App Experience",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Zones",
      },
    ],
    "uri": "/zones",
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Clients List",
              },
            ],
            "uri": "/users/wifi/clients",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Clients Report",
              },
            ],
            "uri": "/users/wifi/reports",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Wireless",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Clients",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Data Studio",
          },
        ],
        "uri": "/dataStudio",
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Reports",
          },
        ],
        "uri": "/reports",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Business Insights",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "adminItem": true,
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Onboarded Systems",
              },
            ],
            "uri": "/admin/onboarded",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Users",
              },
            ],
            "uri": "/admin/users",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Labels",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/labels",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Resource Groups",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/resourceGroups",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Support",
              },
            ],
            "uri": "/admin/support",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Licenses",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/license",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Schedules",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/schedules",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Webhooks",
              },
            ],
            "uri": "/admin/webhooks",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Account Management",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Administration",
      },
    ],
  },
]
`;

exports[`useMenuConfig should not return app experience 1`] = `
Array [
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Dashboard",
      },
    ],
    "uri": "/dashboard",
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Incidents",
              },
            ],
            "uri": "/incidents",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "IntentAI",
              },
            ],
            "uri": "/intentAI",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "AI Analytics",
          },
        ],
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/health/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Health",
              },
            ],
            "uri": "/health",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Service Validation",
              },
            ],
            "uri": "/serviceValidation",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Config Change",
              },
            ],
            "uri": "/configChange",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Network Assurance",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "AI Assurance",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Zones",
      },
    ],
    "uri": "/zones",
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Clients List",
              },
            ],
            "uri": "/users/wifi/clients",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Clients Report",
              },
            ],
            "uri": "/users/wifi/reports",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Wireless",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Clients",
      },
    ],
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/devices\\\\/wifi\\(\\?!\\(\\\\/reports\\)\\)/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Access Points List",
              },
            ],
            "uri": "/devices/wifi",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Access Points Report",
              },
            ],
            "uri": "/devices/wifi/reports/aps",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Airtime Utilization Report",
              },
            ],
            "uri": "/devices/wifi/reports/airtime",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Access Points",
          },
        ],
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/networks\\\\/wireless\\(\\?!\\(\\\\/reports\\)\\)/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Wi-Fi Networks List",
              },
            ],
            "uri": "/networks/wireless",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "WLANs Report",
              },
            ],
            "uri": "/networks/wireless/reports/wlans",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Applications Report",
              },
            ],
            "uri": "/networks/wireless/reports/applications",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Report",
              },
            ],
            "uri": "/networks/wireless/reports/wireless",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Wi-Fi Networks",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Wi-Fi",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/devices\\\\/switch\\(\\?!\\(\\\\/reports\\)\\)/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Switch List",
              },
            ],
            "uri": "/devices/switch",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wired Report",
              },
            ],
            "uri": "/devices/switch/reports/wired",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Switches",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Wired",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Data Studio",
          },
        ],
        "uri": "/dataStudio",
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Reports",
          },
        ],
        "uri": "/reports",
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Occupancy",
          },
        ],
        "openNewTab": true,
        "uri": "/analytics/occupancy",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Business Insights",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "adminItem": true,
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Onboarded Systems",
              },
            ],
            "uri": "/admin/onboarded",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Users",
              },
            ],
            "uri": "/admin/users",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Labels",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/labels",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Resource Groups",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/resourceGroups",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Support",
              },
            ],
            "uri": "/admin/support",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Licenses",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/license",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Schedules",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/schedules",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Webhooks",
              },
            ],
            "uri": "/admin/webhooks",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Account Management",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Administration",
      },
    ],
  },
]
`;

exports[`useMenuConfig should return an array of menu items based on user permissions 1`] = `
Array [
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Dashboard",
      },
    ],
    "uri": "/dashboard",
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Incidents",
              },
            ],
            "uri": "/incidents",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "IntentAI",
              },
            ],
            "uri": "/intentAI",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "AI Analytics",
          },
        ],
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/health/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Health",
              },
            ],
            "uri": "/health",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Service Validation",
              },
            ],
            "uri": "/serviceValidation",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Config Change",
              },
            ],
            "uri": "/configChange",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Network Assurance",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "AI Assurance",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "AppInsights (coming soon)",
          },
        ],
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Video Call QoE",
          },
        ],
        "uri": "/videoCallQoe",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "App Experience",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Zones",
      },
    ],
    "uri": "/zones",
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Clients List",
              },
            ],
            "uri": "/users/wifi/clients",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Clients Report",
              },
            ],
            "uri": "/users/wifi/reports",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Wireless",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Clients",
      },
    ],
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/devices\\\\/wifi\\(\\?!\\(\\\\/reports\\)\\)/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Access Points List",
              },
            ],
            "uri": "/devices/wifi",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Access Points Report",
              },
            ],
            "uri": "/devices/wifi/reports/aps",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Airtime Utilization Report",
              },
            ],
            "uri": "/devices/wifi/reports/airtime",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Access Points",
          },
        ],
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/networks\\\\/wireless\\(\\?!\\(\\\\/reports\\)\\)/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Wi-Fi Networks List",
              },
            ],
            "uri": "/networks/wireless",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "WLANs Report",
              },
            ],
            "uri": "/networks/wireless/reports/wlans",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Applications Report",
              },
            ],
            "uri": "/networks/wireless/reports/applications",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Report",
              },
            ],
            "uri": "/networks/wireless/reports/wireless",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Wi-Fi Networks",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Wi-Fi",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/devices\\\\/switch\\(\\?!\\(\\\\/reports\\)\\)/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Switch List",
              },
            ],
            "uri": "/devices/switch",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wired Report",
              },
            ],
            "uri": "/devices/switch/reports/wired",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Switches",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Wired",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Data Studio",
          },
        ],
        "uri": "/dataStudio",
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Reports",
          },
        ],
        "uri": "/reports",
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Occupancy",
          },
        ],
        "openNewTab": true,
        "uri": "/analytics/occupancy?selectedTenants=WyIwMDE1MDAwMDAwR2xJN1NBQVYiXQ==",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Business Insights",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "adminItem": true,
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Onboarded Systems",
              },
            ],
            "uri": "/admin/onboarded",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Users",
              },
            ],
            "uri": "/admin/users",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Labels",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/labels",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Resource Groups",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/resourceGroups",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Support",
              },
            ],
            "uri": "/admin/support",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Licenses",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/license",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Schedules",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/schedules",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Webhooks",
              },
            ],
            "uri": "/admin/webhooks",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Account Management",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Administration",
      },
    ],
  },
]
`;

exports[`useMenuConfig should return nothing for empty/no user permission 1`] = `
Array [
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Dashboard",
      },
    ],
    "uri": "/dashboard",
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Incidents",
              },
            ],
            "uri": "/incidents",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "IntentAI",
              },
            ],
            "uri": "/intentAI",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "AI Analytics",
          },
        ],
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/health/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Health",
              },
            ],
            "uri": "/health",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Service Validation",
              },
            ],
            "uri": "/serviceValidation",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Config Change",
              },
            ],
            "uri": "/configChange",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Network Assurance",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "AI Assurance",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "AppInsights (coming soon)",
          },
        ],
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Video Call QoE",
          },
        ],
        "uri": "/videoCallQoe",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "App Experience",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Zones",
      },
    ],
    "uri": "/zones",
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Clients List",
              },
            ],
            "uri": "/users/wifi/clients",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Clients Report",
              },
            ],
            "uri": "/users/wifi/reports",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Wireless",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Clients",
      },
    ],
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/devices\\\\/wifi\\(\\?!\\(\\\\/reports\\)\\)/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Access Points List",
              },
            ],
            "uri": "/devices/wifi",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Access Points Report",
              },
            ],
            "uri": "/devices/wifi/reports/aps",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Airtime Utilization Report",
              },
            ],
            "uri": "/devices/wifi/reports/airtime",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Access Points",
          },
        ],
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/networks\\\\/wireless\\(\\?!\\(\\\\/reports\\)\\)/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Wi-Fi Networks List",
              },
            ],
            "uri": "/networks/wireless",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "WLANs Report",
              },
            ],
            "uri": "/networks/wireless/reports/wlans",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Applications Report",
              },
            ],
            "uri": "/networks/wireless/reports/applications",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wireless Report",
              },
            ],
            "uri": "/networks/wireless/reports/wireless",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Wi-Fi Networks",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Wi-Fi",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "children": Array [
          Object {
            "isActiveCheck": /\\^\\\\/devices\\\\/switch\\(\\?!\\(\\\\/reports\\)\\)/,
            "label": Array [
              Object {
                "type": 0,
                "value": "Switch List",
              },
            ],
            "uri": "/devices/switch",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Wired Report",
              },
            ],
            "uri": "/devices/switch/reports/wired",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Switches",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Wired",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "children": Array [
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Data Studio",
          },
        ],
        "uri": "/dataStudio",
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Reports",
          },
        ],
        "uri": "/reports",
      },
      Object {
        "label": Array [
          Object {
            "type": 0,
            "value": "Occupancy",
          },
        ],
        "openNewTab": true,
        "uri": "/analytics/occupancy",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Business Insights",
      },
    ],
  },
  Object {
    "activeIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "adminItem": true,
    "children": Array [
      Object {
        "children": Array [
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Onboarded Systems",
              },
            ],
            "uri": "/admin/onboarded",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Users",
              },
            ],
            "uri": "/admin/users",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Labels",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/labels",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Resource Groups",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/resourceGroups",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Support",
              },
            ],
            "uri": "/admin/support",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Licenses",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/license",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Schedules",
              },
            ],
            "openNewTab": true,
            "uri": "/analytics/admin/schedules",
          },
          Object {
            "label": Array [
              Object {
                "type": 0,
                "value": "Webhooks",
              },
            ],
            "uri": "/admin/webhooks",
          },
        ],
        "label": Array [
          Object {
            "type": 0,
            "value": "Account Management",
          },
        ],
        "type": "group",
      },
    ],
    "inactiveIcon": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "label": Array [
      Object {
        "type": 0,
        "value": "Administration",
      },
    ],
  },
]
`;
